[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "clooey"
version = "0.1.0"
description = "Converts CLIs into web forms"
authors = [
    {name = "Alvin Wan", email = "hi@alvinwan.com"}
]
readme = "README.md"
license = {text = "MIT License"}
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "jinja2"
]

[project.urls]
Homepage = "https://github.com/alvinwan/clooey"